Added many widgets, plots, tables

--- a/src/app.css
+++ b/src/app.css
@@ -16,3 +16,19 @@
   font-weight: 400;
   font-style: normal;
 }
+
+@layer utilities {
+
+  
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    
+    scrollbar-width: none;
+    
+  }
+}
